Added some animations

--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
     <link rel="stylesheet" href="styles/styles.css" />
   </head>
   <body>
-    <div class="jokeContainer">
-      <h1>Joke Studio 😊</h1>
-      <p id="jokeContent">
-        <!-- Jokes here -->
-      </p>
-      <button id="randomJokeBtn" class="jokeBtn">Random Joke</button>
+    <div class="borderWrapper">
+      <div class="jokeContainer">
+        <h1>Joke Studio 😊</h1>
+        <p id="jokeContent" class="joke-content">
+          <!-- Jokes here -->
+        </p>
+        <button id="randomJokeBtn" class="jokeBtn">Random Joke</button>
+      </div>
     </div>
+
     <script src="scripts/main.js"></script>
   </body>
 </html>
